@@ -210,6 +210,7 @@ importFrom(methods,getSlots)
 importFrom(methods,is)
 importFrom(methods,setClass)
 importFrom(methods,slotNames)
+importFrom(nlme,intervals)
 importFrom(numDeriv,jacobian)
 importFrom(parallel,detectCores)
 importFrom(polycor,hetcor)
