@@ -3,6 +3,7 @@
 * NEW: `optimiser` parameter for umxACE and other twin models: Set the optimizer in your model code!
 * NEW umx_long2wide: Merges long data on famID, for an unlimited number of individuals in a family (twinIDs)
 * NEW umx_wide2long: Takes a family (currently limited to 2) df, and returns a long-format version.
+* NEW `forEach` option in `umxPath` (like one.headed version of "unique.pairs").
 * IMPROVED: Auto run/plot for umxGxE
 * IMPROVED: switched umxGxE plot colors to the universal ACE -> RGB scheme
 * IMPROVED: umxCI supports setting interval and type
